--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.15",
     "storybook": "7.5.2",
+    "storybook-addon-pseudo-states": "^2.1.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
