--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "marionum-ui-kit",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "main": "./dist/marionum-ui-kit.umd.cjs",
+  "module": "./dist/marionum-ui-kit.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/marionum-ui-kit.js",
+      "require": "./dist/marionum-ui-kit.umd.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && pnpm pack",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "theme": "chakra-cli tokens src/theme.ts"
+    "theme": "chakra-cli tokens src/theme/index.ts"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.1",
@@ -19,18 +33,13 @@
     "@chakra-ui/theme-tools": "^2.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-highlight": "^7.0.0"
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
     "@storybook/addon-essentials": "7.5.2",
     "@storybook/addon-interactions": "7.5.2",
     "@storybook/addon-links": "7.5.2",
-    "@storybook/addon-onboarding": "1.0.8",
     "@storybook/blocks": "7.5.2",
     "@storybook/preview-api": "^7.5.2",
     "@storybook/react": "7.5.2",
@@ -48,6 +57,7 @@
     "storybook": "7.5.2",
     "storybook-addon-pseudo-states": "^2.1.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.3"
   }
 }
