--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.1",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@chakra-ui/styled-system": "^2.9.1",
     "@chakra-ui/theme-tools": "^2.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.15",
     "framer-motion": "^10.16.4"
   },
   "devDependencies": {
