--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
-    "framer-motion": "^10.16.4"
+    "framer-motion": "^10.16.4",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
