--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
+    "downshift": "^8.2.3",
     "framer-motion": "^10.16.4",
     "react-icons": "^4.11.0"
   },
